<resources>
    <string name="first_start">false</string>
    <string name="OK">OK</string>
    <string name="NO">Nincs</string>
    <string name="iHave">Van</string>
    <string name="yes">Igen</string>
    <string name="back">Vissza</string>
    <string name="app_name">OkosNotesz</string>
    <string name="settings">Beállítások</string>
    <string name="activity_main">Home</string>
    <string name="welcome">Üdvözöllek!</string>
    <string name="addExpert">Szakember hozzáadása</string>
    <string name="editExpert">Szakember szerkesztése</string>
    <string name="addExpertOK">Szakember hozzáadása sikeres!</string>
    <string name="addTreatment">Kezelés hozzáadása</string>
    <string name="editTreatment">Kezelés szerkesztése</string>
    <string name="addTreatmentOK">Kezelés hozzáadása sikeres!</string>
    <string name="addProduct">Termék hozzáadása</string>
    <string name="editproduct">Termék szerkesztése</string>
    <string name="addProductOK">Termék hozzáadása sikeres!</string>
    <string name="addGuest">Vendég hozzáadása</string>
    <string name="editGuest">Vendég szerkesztése</string>
    <string name="addGuestOK">Vendég hozzáadása sikeres!</string>
    <string name="unsuccessfulOp">Sikertelen művelet!</string>
    <string name="Name">Név: </string>
    <string name="Note">Megjegyzés: </string>
    <string name="treatmentTime">Időtartam percben: </string>
    <string name="time">Időtartam</string>
    <string name="price">Ár: </string>
    <string name="cost">Költség: </string>
    <string name="cancel">Mégsem</string>
    <string name="edit">Szerkeszt</string>
    <string name="move">Mozgat</string>
    <string name="delete">Töröl</string>
    <string name="deleteAlert">Biztosan törlöd?</string>
    <string name="deleteSuccessful">Sikeresen törölve!</string>
    <string name="editSuccessful">Szerkesztés sikeres!</string>
    <string name="exitAlert">Biztosan kilépsz?</string>
    <string name="guests">Vendégek</string>
    <string name="guest">Vendég</string>
    <string name="calendar">Naptár</string>
    <string name="reports">Kimutatások</string>
    <string name="booking">Foglalás</string>
    <string name="goods">Termékek</string>
    <string name="commercial">Kereskedelem</string>
    <string name="product">Termék: </string>
    <string name="buyer">Vásárló: </string>
    <string name="quantity"> db</string>
    <string name="value">Érték: </string>
    <string name="expert">Szakemberek</string>
    <string name="exp">Szakember</string>
    <string name="treatment">Kezelések</string>
    <string name="tre">Kezelés</string>
    <string name="phone1">Telefonszám</string>
    <string name="phone2">Másodlagos telefonszám</string>
    <string name="email1">E-mail</string>
    <string name="email2">Másodlagos e-mail</string>
    <string name="contact">Elérhetőség</string>
    <string name="contact2">Egyéb elérhetőség</string>
    <string name="guestImportSelect">
        Akarod a kapcsolataid közül importálni a vendégedet,
        vagy hozzá adnál egy újat?</string>
    <string name="contacts">A kapcsolataidat szerkesztheted az ismert módokon</string>
    <string name="importGuest">Importálom</string>
    <string name="addNewGuest">Hozáadok egy újat</string>
    <string name="noDatas">Nincs adat</string>
    <string name="addNewData">Kattints a pluszra!</string>
    <string name="pieces"> db.</string>
    <string name="saleSuccessful">Sikeres eladás</string>
    <string name="chooseProducet">Válassz egy terméket!</string>
    <string name="customer">Vásárló</string>
    <string name="customer_choice">Válassz egy vásárlót!</string>
    <string name="reportsOfWeek">. heti kimtatása</string>
    <string name="reportsOfMonth">. havi kimutatása</string>
    <string name="january">Január</string>
    <string name="february">Február</string>
    <string name="march">Március</string>
    <string name="april">Április</string>
    <string name="may">Május</string>
    <string name="june">Június</string>
    <string name="july">Július</string>
    <string name="august">Augusztus</string>
    <string name="september">Szeptember</string>
    <string name="october">Október</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Hétfő</string>
    <string name="tuesday">Kedd</string>
    <string name="wednesday">Szerda</string>
    <string name="thursday">Csütörtök</string>
    <string name="friday">Péntek</string>
    <string name="saturday">Szombat</string>
    <string name="sunday">Vasárnap</string>
    <string name="mo">H</string>
    <string name="tu">K</string>
    <string name="we">Sze</string>
    <string name="th">Cs</string>
    <string name="fr">P</string>
    <string name="sa">Szo</string>
    <string name="su">V</string>
    <string name="month"> </string>
    <string name="week"> hét</string>
    <string name="year">2017</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="date_picker">Időpont választása</string>
    <string name="date">Időpont</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="next"> \u003e \u003e </string>
    <string name="prev"> \u003c \u003c</string>
    <string name="last_date">31</string>
    <string name="loading">Adatok betöltése</string>
    <string name="website">http://www.okosnotesz.hu</string>
    <string name="wait">Türelem</string>
    <string name="search">Keresés</string>
    <string name="reserved">A kezelésre nincs elég idő ebben az időpontban!</string>
    <string name="today">Mai nap</string>
    <item name="TRE_ARRAY" type="id" />
    <item name="REPORT" type="id" />
    <item name="TEXT_VIEW_TAG" type="id"/>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_week">WeekActivity</string>
    <string name="action_settings">Settings</string>
</resources>
