<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGuestBooking"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text="@string/addGuest"
        android:backgroundTint="@android:color/white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGuestBooking"
        android:id="@+id/btnTreatmentBooking"
        android:layout_margin="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/addTreatment"
        android:backgroundTint="@android:color/white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTreatmentBooking"
        android:id="@+id/btnDatePick"
        android:layout_margin="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/date_picker"
        android:backgroundTint="@android:color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGuestBooking"
        android:layout_below="@+id/btnDatePick"
        android:layout_margin="10dp"
        android:hint="@string/guest"
        android:textColorHint="@android:color/white"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTreatmentBooking"
        android:layout_below="@+id/tvGuestBooking"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:hint="@string/treatment"
        android:textColorHint="@android:color/white"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDateBooking"
        android:layout_below="@+id/tvTreatmentBooking"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:hint="@string/date"
        android:textColorHint="@android:color/white"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvDateBooking"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaleOk"
                android:text="@string/OK"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:backgroundTint="@android:color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaleCancel"
                android:text="@string/cancel"
                android:layout_centerHorizontal="true"
                android:layout_alignRight="@+id/btnSaleOk"
                android:backgroundTint="@android:color/white"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>