<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productAddTitle"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/productAddTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/productNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/Name"
            android:inputType="text"
            android:maxLength="20"
            android:textAlignment="center"
            android:textSize="20dp" />
        <requestFocus/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_below="@id/textInputLayoutProductName"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/productPriceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/price"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutProductCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_below="@id/textInputLayoutProductPrice">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/productCostInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/cost"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutProductNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_below="@id/textInputLayoutProductCost"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/productNoteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/Note"
            android:inputType="text"
            android:maxLength="13"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_below="@id/textInputLayoutProductNote">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/btnAddProductsCancel"
                android:text="@string/cancel"
                android:clickable="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/btnAddProductsCancel"
                android:layout_centerInParent="true"
                android:id="@+id/btnAddProductsOK"
                android:clickable="true"
                android:text="@string/OK"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>