<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/treatmentNameItemLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Name"
        android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/treatmentNameItemLayout"
        android:id="@+id/treatmentpriceLayout">

        <TextView
            android:id="@+id/tvTrePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/price" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/treatmentNameItemLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvTreTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/time" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/treatmentNameItemLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tvProdNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Note"
                android:layout_marginTop="5dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
 </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"
        android:id="@+id/separatorTre"
        android:layout_below="@id/treatmentpriceLayout"/>
    <ListView
        android:id="@+id/treatmentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:layout_below="@+id/separatorTre"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabTre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/Color15"
        app:srcCompat="@android:drawable/ic_input_add"
        />
</RelativeLayout>